[gd_scene load_steps=6 format=3 uid="uid://5m1yloeo8g0p"]

[ext_resource type="Script" uid="uid://eb5b3bjk2xwv" path="res://Autoload/SaveSystem/SaveWindow.gd" id="1_pfkxl"]
[ext_resource type="PackedScene" uid="uid://bk4u4nws2bquo" path="res://Gameplay/GameSession/GameSession.tscn" id="2_hydm3"]
[ext_resource type="Shader" uid="uid://c8hf18m2nkakh" path="res://Assets/Resourses/GradientBlurShader.gdshader" id="3_4hm3g"]
[ext_resource type="Theme" uid="uid://3p0so5ihlcum" path="res://Assets/Themes/Base.tres" id="3_4sx4x"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7gxmy"]
shader = ExtResource("3_4hm3g")
shader_parameter/color_light = Color(0.242437, 0.649827, 0.708483, 1)
shader_parameter/color_dark = Color(0.303599, 0.146138, 0.0374848, 1)
shader_parameter/mixing = 1.0
shader_parameter/lod = 0.8

[node name="LoadSave" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pfkxl")
game_session_scene = ExtResource("2_hydm3")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_mode = 3
layer = 3
visible = false

[node name="Panel2" type="Panel" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_4sx4x")

[node name="ColorRect_MenuPanel" type="ColorRect" parent="CanvasLayer/Panel2"]
material = SubResource("ShaderMaterial_7gxmy")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_4sx4x")

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Panel2/ColorRect_MenuPanel"]
layout_mode = 2
anchor_left = 0.042
anchor_top = 0.061
anchor_right = 0.373
anchor_bottom = 0.388
offset_left = -0.476006
offset_top = 0.363991
offset_right = -0.672058
offset_bottom = 0.511993
size_flags_horizontal = 3
expand_mode = 1
stretch_mode = 4

[node name="VSeparator" type="VSeparator" parent="CanvasLayer/Panel2/ColorRect_MenuPanel"]
layout_mode = 2
anchor_left = 0.812
anchor_top = 0.403
anchor_right = 0.816
anchor_bottom = 0.957
offset_left = -0.791992
offset_top = 0.371979
offset_right = 8.54395
offset_bottom = 0.267944

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Panel2/ColorRect_MenuPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.83
anchor_top = 0.419
anchor_right = 0.983
anchor_bottom = 0.942
offset_left = -0.280029
offset_top = 0.155975
offset_right = -0.428101
offset_bottom = 0.407959

[node name="Button_Load" type="Button" parent="CanvasLayer/Panel2/ColorRect_MenuPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_4sx4x")
text = "Load"

[node name="Button_Save" type="Button" parent="CanvasLayer/Panel2/ColorRect_MenuPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_4sx4x")
text = "Save
"

[node name="Button_Delete" type="Button" parent="CanvasLayer/Panel2/ColorRect_MenuPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_4sx4x")
text = "Delete"

[node name="Button_Close" type="Button" parent="CanvasLayer/Panel2/ColorRect_MenuPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_4sx4x")
text = "Close
"

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/Panel2/ColorRect_MenuPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.042
anchor_top = 0.418
anchor_right = 0.797
anchor_bottom = 0.939
offset_left = -0.640007
offset_top = -0.440002
offset_right = -0.240112
offset_bottom = -0.120056

[node name="HBoxContainer_edit" type="HBoxContainer" parent="CanvasLayer/Panel2/ColorRect_MenuPanel/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Panel2/ColorRect_MenuPanel/VBoxContainer2/HBoxContainer_edit"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1
theme = ExtResource("3_4sx4x")
theme_override_font_sizes/font_size = 40
text = "
File name:
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LineEdit" type="LineEdit" parent="CanvasLayer/Panel2/ColorRect_MenuPanel/VBoxContainer2/HBoxContainer_edit"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Tree" type="Tree" parent="CanvasLayer/Panel2/ColorRect_MenuPanel/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 4
column_titles_visible = true
enable_recursive_folding = false
hide_root = true
select_mode = 1
scroll_horizontal_enabled = false

[node name="TextureRect_minimap" type="TextureRect" parent="CanvasLayer/Panel2/ColorRect_MenuPanel"]
layout_mode = 0
offset_left = 835.0
offset_top = 66.0
offset_right = 1185.0
offset_bottom = 416.0
expand_mode = 1

[connection signal="visibility_changed" from="CanvasLayer" to="." method="_on_canvas_layer_visibility_changed"]
[connection signal="pressed" from="CanvasLayer/Panel2/ColorRect_MenuPanel/VBoxContainer/Button_Load" to="." method="_on_button_load_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel2/ColorRect_MenuPanel/VBoxContainer/Button_Save" to="." method="_on_button_save_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel2/ColorRect_MenuPanel/VBoxContainer/Button_Delete" to="." method="_on_button_delete_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel2/ColorRect_MenuPanel/VBoxContainer/Button_Close" to="." method="_on_button_close_pressed"]
[connection signal="item_activated" from="CanvasLayer/Panel2/ColorRect_MenuPanel/VBoxContainer2/Tree" to="." method="_on_tree_saves_item_activated"]
[connection signal="item_selected" from="CanvasLayer/Panel2/ColorRect_MenuPanel/VBoxContainer2/Tree" to="." method="_on_tree_saves_item_activated"]
